--- a/Perrruna Pagina/index.html
+++ b/Perrruna Pagina/index.html
@@ -4,7 +4,26 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="https://unpkg.com/leaflet@1.7.1/dist/leaflet.css" />
   <link rel="stylesheet" href="pagina.css" />
+  <script src="https://www.gstatic.com/firebasejs/8.6.1/firebase-app.js"></script>
+  <script src="https://www.gstatic.com/firebasejs/8.6.1/firebase-auth.js"></script>
+  <script src="https://www.gstatic.com/firebasejs/8.6.1/firebase-firestore.js"></script>
   <title>Menu y Contenido</title>
+  <script>
+    // Your web app's Firebase configuration
+    // For Firebase JS SDK v7.20.0 and later, measurementId is optional
+    var firebaseConfig = {
+        apiKey: "AIzaSyA_SM6d1nCztP2JON5DHytWOOWs7Jl_Ff4",
+        authDomain: "perruna-cd211.firebaseapp.com",
+        projectId: "perruna-cd211",
+        storageBucket: "perruna-cd211.appspot.com",
+        messagingSenderId: "796763331783",
+        appId: "1:796763331783:web:2fd75de7e305206f66b2e2",
+        measurementId: "G-RHB6WS2L9H"
+    };
+    // Initialize Firebase
+    firebase.initializeApp(firebaseConfig);
+    firebase.analytics();
+</script>
   <!--Facebook pixel-->
 <script>
   !function(f,b,e,v,n,t,s)
