--- a/Perrruna Pagina/public/cuidadores/cuidadores.html
+++ b/Perrruna Pagina/public/cuidadores/cuidadores.html
@@ -1,211 +1,122 @@
 <!DOCTYPE html>
-<html>
-    <head>
-        <meta charset="utf-8">
-        <title>Perruna</title>
-        <link rel="stylesheet" href="../cuidadores/cuidadores.css">
-        <link rel="icon" href="../fotos/perro2.png">
-        <link href='https://unpkg.com/boxicons@2.0.7/css/boxicons.min.css' rel='stylesheet'>
-      
-        <script src="https://www.gstatic.com/firebasejs/8.6.1/firebase-app.js"></script>
-        <script src="https://www.gstatic.com/firebasejs/8.6.1/firebase-auth.js"></script>
-        <script src="https://www.gstatic.com/firebasejs/8.6.1/firebase-firestore.js"></script>
-        <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-4023386448583496"
-        crossorigin="anonymous"></script>
-        <!-- Google tag (gtag.js) -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=G-RHB6WS2L9H"></script>
-<script>
-  window.dataLayer = window.dataLayer || [];
-  function gtag(){dataLayer.push(arguments);}
-  gtag('js', new Date());
+<html lang="es">
+  <head>
+    <meta charset="utf-8" />
+    <title>Perruna</title>
+    <link rel="stylesheet" href="../cuidadores/cuidadores.css" />
+    <link rel="icon" href="../fotos/perro2.png" />
+    <link
+      href="https://unpkg.com/boxicons@2.0.7/css/boxicons.min.css"
+      rel="stylesheet"
+    />
+  </head>
 
-  gtag('config', 'G-RHB6WS2L9H');
-</script>
-    <script>
-        // Your web app's Firebase configuration
-        // For Firebase JS SDK v7.20.0 and later, measurementId is optional
-        var firebaseConfig = {
-            apiKey: "AIzaSyA_SM6d1nCztP2JON5DHytWOOWs7Jl_Ff4",
-            authDomain: "perruna-cd211.firebaseapp.com",
-            projectId: "perruna-cd211",
-            storageBucket: "perruna-cd211.appspot.com",
-            messagingSenderId: "796763331783",
-            appId: "1:796763331783:web:2fd75de7e305206f66b2e2",
-            measurementId: "G-RHB6WS2L9H"
-        };
-        // Initialize Firebase
-        firebase.initializeApp(firebaseConfig);
-        firebase.analytics();
-    </script>
-</head>
-  
-<body>
+  <body>
     <header id="header">
-        <div class="wrap">
-          <div id="logo" style="text-align: center;">
-            <a href="../inicio/pagina.html"><img src="../fotos/perro.png" width="52" height="52" style="margin: 0 auto;"></a>
-          </div>
-
-          <nav id="menu">
-            
-            <ul>
-              <li class="switch-container">
-                <label class="switch">
-                  <input type="checkbox" id="dark-mode-toggle">
-                  <span class="slider"></span>
-                </label>
-              </li>
-              <li><a href="../inicio/pagina.html">Inicio</a></li>
-              <li><a href="../cuidadores/cuidadores.html">Cuidadores</a></li>
-              <li><a href="../servicios/servicios.html">Servicios</a></li>
-              <li><a href="../ubicacion/mapa.html">Ubicacion</a></li>
-              <li><a href="../contacto/contacto.html">Contacto</a></li>
-              <li class="cerrar"><a href="../login/Login.html"><img src="../fotos/user.png" width="52" height="52" style="margin: 0 auto;"></a></li>              
-            </ul>
-          </nav>
+      <div class="wrap">
+        <div id="logo" style="text-align: center">
+          <a href="../index.html"
+            ><img
+              src="../fotos/perro.png"
+              width="52"
+              height="52"
+              style="margin: 0 auto"
+          /></a>
         </div>
-      </header>
-      <ul class="cards">
-        <li>
-            <a href="" class="card">
-                <img src="../fotos/husky.png" class="card__image" alt=""/>
-                <div class="card__overlay">
-                    <div class="card__header">
-                        <img class="card__thumb" src="../fotos/cuidador3.png" alt="" />
-                        <div class="card__header-text">
-                            <h3 class="card__title">Diego González</h3>
-                            <span class="card__tagline">C. de Jorge Juan, 28001 Madrid</span>
-                            <span class="estrellas">Cuidador de Husky</span>
-                            <h3 class="puntuacion" id="score">Loading...</h3>
-                        </div>
-                    </div>
-                    <p class="card__description">Además de pasear a tu perro, puedo ayudarte a entrenarlo y enseñarle comandos básicos de obediencia. </p>
-                </div>
-            </a>
-        </li>
-        <li>
-          <a href="" class="card">
-            <img src="../fotos/galgo.png" class="card__image" alt="" />
-            <div class="card__overlay">        
-              <div class="card__header">
-                <img class="card__thumb" src="../fotos/cuidador2.png" alt="" />
-                <div class="card__header-text">
-                  <h3 class="card__title">Paula Saenz</h3>
-                  <span class="card__tagline">Calle de Goya, 2, 28001 Madrid</span>            
-                  <span class="estrellas">Cuidadora de Galgos</span>
-                  <h5 class="puntuacion">9</h5>
-                </div>
+
+        <nav id="menu">
+          <ul>
+            <li class="switch-container">
+              <label class="switch">
+                <input type="checkbox" id="dark-mode-toggle" />
+                <span class="slider"></span>
+              </label>
+            </li>
+            <li><a href="../index.html">Inicio</a></li>
+            <li><a href="../cuidadores/cuidadores.html">Cuidadores</a></li>
+            <li><a href="../servicios/servicios.html">Servicios</a></li>
+            <li><a href="../ubicacion/mapa.html">Ubicacion</a></li>
+            <li><a href="../contacto/contacto.html">Contacto</a></li>
+            <li class="cerrar">
+              <a href="../login/Login.html"
+                ><img
+                  src="../fotos/user.png"
+                  width="52"
+                  height="52"
+                  style="margin: 0 auto"
+              /></a>
+            </li>
+          </ul>
+        </nav>
+      </div>
+    </header>
+    <ul class="cards" id="cards-container">
+      <!-- Las tarjetas se agregarán aquí con JavaScript -->
+    </ul>
+
+    <script src="https://www.gstatic.com/firebasejs/8.6.1/firebase-app.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/8.6.1/firebase-auth.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/8.6.1/firebase-firestore.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/8.6.1/firebase-database.js"></script>
+    <script>
+      var firebaseConfig = {
+        apiKey: "AIzaSyA_SM6d1nCztP2JON5DHytWOOWs7Jl_Ff4",
+        authDomain: "perruna-cd211.firebaseapp.com",
+        projectId: "perruna-cd211",
+        storageBucket: "perruna-cd211.appspot.com",
+        messagingSenderId: "796763331783",
+        appId: "1:796763331783:web:2fd75de7e305206f66b2e2",
+        measurementId: "G-RHB6WS2L9H",
+      };
+
+      firebase.initializeApp(firebaseConfig);
+
+      // Obtén una referencia a la colección "Datos Prueba/Datos Prueba"
+      var database = firebase.database();
+      var datosPruebaRef = database.ref("Datos Prueba/Datos Prueba");
+
+      // Obtén los datos y crea las tarjetas
+      datosPruebaRef.once("value", function (snapshot) {
+        var cardsContainer = document.getElementById("cards-container");
+        var counter = 0; // contador para rastrear los elementos
+
+        snapshot.forEach(function (childSnapshot) {
+          var cardData = childSnapshot.val();
+          var cardHTML = `
+      <li>
+        <a href="" class="card">
+          <img src="${cardData.image}" class="card__image" alt=""/>
+          <div class="card__overlay">
+            <div class="card__header">
+              <img class="card__thumb" src="${cardData.image}" alt="" />
+              <div class="card__header-text">
+                <h3 class="card__title">${cardData.title}</h3>
+                <span class="card__tagline">${cardData.tagline}</span>
+                <span class="estrellas">${cardData.estrellas}</span>
+                <h5 class="puntuacion">${cardData.puntuacion}</h5>
               </div>
-              <p class="card__description">Como criador y dueño de perros de raza durante más de diez años, tengo un amplio conocimiento sobre las necesidades específicas de cada raza. </p>
             </div>
-          </a>
-        </li>
-        <li>
-          <a href="" class="card">
-            <img src="../fotos/retriever.png" class="card__image" alt="" />
-            <div class="card__overlay">
-              <div class="card__header">
-                <img class="card__thumb" src="../fotos/cuidador4.png" alt="" />
-                <div class="card__header-text">
-                  <h3 class="card__title">Sara Rodriguez</h3>
-                  <span class="card__tagline">C. Ramon y Cajal, 28902 Getafe</span>            
-                  <span class="estrellas">Cuidadora de Retrievers</span>
-                  <h5 class="puntuacion">6</h5>
-                </div>
-              </div>
-              <p class="card__description">Soy una cuidadora de perros con conocimientos veterinarios.</p>
-            </div>
-          </a>
-        </li>
-        <li>
-          <a href="" class="card">
-            <img src="../fotos/dogo.png" class="card__image" alt="" />
-            <div class="card__overlay">
-              <div class="card__header">
-                <img class="card__thumb" src="../fotos/cuidador1.png" alt="" />
-                <div class="card__header-text">
-                  <h3 class="card__title">Suso Zayas</h3>
-                  <span class="card__tagline">C. Isaac Albéniz, 28222 Majadahonda, Madrid</span>            
-                  <span class="estrellas">Cuidador de Dogos</span>
-                  <h5 class="puntuacion">4</h5>
-                </div>          
-              </div>
-              <p class="card__description">Los perros son mi pasión y me encanta pasar tiempo con ellos. </p>
-            </p>
-            </div>
-          </a>
-        </li>    
-      </ul>
-      <ul class="cards">
-        <li>
-          <a href="" class="card">
-            <img src="../fotos/bull.png" class="card__image" alt="" />
-            <div class="card__overlay">
-              <div class="card__header">
-                <img class="card__thumb" src="../fotos/cuidador6.png" alt="" />
-                <div class="card__header-text">
-                  <h3 class="card__title">Leticia Caemundos</h3> 
-                  <span class="card__tagline">C. Guindales, 28921 Alcorcón</span>            
-                  <span class="estrellas">Cuidadora de Bullmastiff</span>
-                  <h5 class="puntuacion">7</h5>
-                </div>
-              </div>
-              <p class="card__description">¿Necesitas que alguien cuide de tus mascotas en la comodidad de tu hogar?</p>
-            </div>
-          </a>      
-        </li>
-        <li>
-          <a href="" class="card">
-            <img src="../fotos/perro6.jpg" class="card__image" alt="" />
-            <div class="card__overlay">        
-              <div class="card__header">
-                <img class="card__thumb" src="../fotos/cuidador8.png" alt="" />
-                <div class="card__header-text">
-                  <h3 class="card__title">Pablito Clabito</h3>
-                    <span class="card__tagline">C. Rafael Alberti, 28400 Collado Villalba, Madrid</span>            
-                  <span class="estrellas">Cuidador de Setter</span>
-                  <h5 class="puntuacion">9</h5>
-                </div>
-              </div>
-              <p class="card__description">Si estás buscando a alguien que cuide de tu mascota con amor y dedicación, soy la persona ideal.</p>
-            </div>
-          </a>
-        </li>
-        <li>
-          <a href="" class="card">
-            <img src="../fotos/perro7.png" class="card__image" alt="" />
-            <div class="card__overlay">
-              <div class="card__header">
-                <img class="card__thumb" src="../fotos/cuidador5.png" alt="" />
-                <div class="card__header-text">
-                  <h3 class="card__title">Parker Spiderman</h3>
-                  <span class="card__tagline">C. de la Toja, 5, 28439 Alpedrete, Madrid</span>            
-                  <span class="estrellas">Cuidador de Cavalier</span>
-                  <h5 class="puntuacion">5</h5>
-                </div>
-              </div>
-              <p class="card__description">Si tu perro necesita compañía y alguien que le de mimos y caricias, ¡soy el indicado!</p>
-            </div>
-          </a>
-        </li>
-        <li>
-          <a href="" class="card">
-            <img src="../fotos/perro3.png" class="card__image" alt="" />
-            <div class="card__overlay">
-              <div class="card__header">
-                <img class="card__thumb" src="../fotos/cuidador7.png" alt="" />
-                <div class="card__header-text">
-                  <h3 class="card__title">Lolita Flores</h3>
-                  <span class="card__tagline">Carr. de la Presa, 20, 28200 San Lorenzo de El Escorial, Madrid</span>            
-                  <span class="estrellas">Cuidadora de Bulldog </span>
-                  <h5 class="puntuacion">2</h5>
-                </div>          
-              </div>
-              <p class="card__description">Si estás buscando a alguien que cuide de tu mascota con amor y dedicación, soy la persona ideal.</p>
-            </div>
-          </a>
-        </li>    
-      </ul>
-</body>
-<script src="../cuidadores/cuidadores.js"></script>
+            <p class="card__description">${cardData.description}</p>
+          </div>
+        </a>
+      </li>
+    `;
+          cardsContainer.innerHTML += cardHTML;
+          counter++;
+
+          // Si hemos alcanzado un múltiplo de cuatro, agregamos un salto de línea para crear grupos de cuatro
+          if (counter % 4 === 0) {
+            cardsContainer.innerHTML += "";
+          }
+        });
+      });
+    </script>
+    <script>
+      const darkModeToggle = document.querySelector("#dark-mode-toggle");
+
+      darkModeToggle.addEventListener("change", () => {
+        document.body.classList.toggle("dark-mode");
+      });
+    </script>
+  </body>
 </html>
