--- a/Perrruna Pagina/public/login/Login.html
+++ b/Perrruna Pagina/public/login/Login.html
@@ -59,13 +59,13 @@
 <header id="header">
   <div class="wrap">
     <div id="logo" style="text-align: center;">
-      <a href="../inicio/pagina.html"><img src="../fotos/perro.png" width="52" height="52" style="margin: 0 auto;"></a>
+      <a href="../index.html"><img src="../fotos/perro.png" width="52" height="52" style="margin: 0 auto;"></a>
     </div>
 
     <nav id="menu">
       
       <ul>
-        <li><a href="../inicio/pagina.html">Inicio</a></li>
+        <li><a href="../index.html">Inicio</a></li>
         <li><a href="../cuidadores/cuidadores.html">Cuidadores</a></li>
         <li><a href="../servicios/servicios.html">Servicios</a></li>
         <li><a href="../ubicacion/mapa.html">Ubicacion</a></li>
