--- a/Perrruna Pagina/login/Login.html
+++ b/Perrruna Pagina/login/Login.html
@@ -59,7 +59,7 @@
 <header id="header">
   <div class="wrap">
     <div id="logo" style="text-align: center;">
-      <a href="../index.html"><img src="../fotos/perro.png" width="52" height="52" style="margin: 0 auto;"></a>
+      <a href="../index.html"><img src="../fotos/perrocon.png" width="52" height="52" style="margin: 0 auto;"></a>
     </div>
 
     <nav id="menu">
@@ -132,8 +132,7 @@
 
       </main>
       <footer>
-        <center><h1>Cuidadores Perrunos</h1></center>
-        <center><p>Estos son varios de los cuidadores que están en nuestra aplicación registrados para realizar los servicios.</p></center>
+        <center><h1>CUIDADORES PERRUNOS</h1></center>
         <div class="contenedor">
           <div class="box" id="box">
             <div class="elementos">
