--- a/Perrruna Pagina/contacto/contacto.html
+++ b/Perrruna Pagina/contacto/contacto.html
@@ -37,7 +37,7 @@
   <header id="header">
     <div class="wrap">
       <div id="logo" style="text-align: center;">
-        <a href="../index.html"><img src="../fotos/perro.png" width="52" height="52"
+        <a href="../index.html"><img src="../fotos/perrocon.png" width="52" height="52"
             style="margin: 0 auto;"></a>
       </div>
 
@@ -63,7 +63,7 @@
     <div class="card">
       <div class="ficha-app article-asset-normal">
         <div class="ficha-app-image">
-          <img src="../fotos/perro2.png" alt="DoggieApp">
+          <img src="../fotos/perrosin.png" alt="DoggieApp">
         </div>
         <div class="ficha-app-description">
           <h3 class="ficha-app-name">Mi-Mascota Perruna</h3>
