--- a/Perrruna Pagina/cuidadores/cuidadores.html
+++ b/Perrruna Pagina/cuidadores/cuidadores.html
@@ -17,7 +17,7 @@
         <div id="logo" style="text-align: center">
           <a href="../index.html"
             ><img
-              src="../fotos/perro.png"
+              src="../fotos/perrocon.png"
               width="52"
               height="52"
               style="margin: 0 auto"
