--- a/Perrruna Pagina/servicios/servicios.html
+++ b/Perrruna Pagina/servicios/servicios.html
@@ -44,7 +44,7 @@
     <header id="header">
         <div class="wrap">
           <div id="logo" style="text-align: center;">
-            <a href="../index.html"><img src="../fotos/perro.png" width="52" height="52" style="margin: 0 auto;"></a>
+            <a href="../index.html"><img src="../fotos/perrocon.png" width="52" height="52" style="margin: 0 auto;"></a>
           </div>
           <nav id="menu">
             <ul>
